--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.servlet.context-path=/restapi
 #Banner
 
 quarkus.banner.enabled=true
-quarkus.banner.path=banner/banner.txt
+quarkus.banner.path=Banner/banner.txt
 
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = ${POSTGRESQL_USER}
