--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
+#http://localhost:8080/restapi/books
 quarkus.http.port=8080
 quarkus.http.cors=true
 #quarkus.http.ssl-port=8443
 quarkus.servlet.context-path=/restapi
 
-#Banner
-
 quarkus.banner.enabled=true
-quarkus.banner.path=Banner/banner.txt
+quarkus.banner.path=banner/banner.txt
 
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = ${POSTGRESQL_USER}
